--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,7 +16,7 @@ hr{
     margin: 0.375rem;
 }
 .filter-item :hover{
-    color: #0d6efd;
+    color: #888DEA;
     background-color: #f8f9fa;
 }
 .job-title-container{
@@ -112,7 +112,7 @@ hr{
         align-items: center;
         font-size: 0.6rem;
         border: 0.2px solid;
-        color: #0d6efd !important;
+        color: #888DEA !important;
         background-color: transparent;
     }
     
@@ -166,12 +166,49 @@ mat-list-item{
     align-items: center;
     text-align: center;
     background-size: 100% 200%;
-    background-image: linear-gradient(to bottom,#fff 50%,#3f51b5 50%);
+    background-image: linear-gradient(to bottom,#fff 50%,#888DEA 50%);
     background-repeat: no-repeat;
     background-position: 0 10%;
     transition: background-position .2s;
     &:hover {
         color: #fff;
         background-position: 0 100%
+    }
+}
+
+.search-bar{
+    background-color: #BBBEEC;
+    border-radius:  5px;
+    padding: 0.2rem;
+    cursor: pointer;
+    
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+    .search-input{
+        border: none;
+        outline: none;
+        background-color: #BBBEEC;
+        width: 90%;
+        cursor: pointer;
+        
+    }
+    button{
+        
+        height: 0.1rem;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .material-icons{
+            font-size: 1.2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+        }
     }
 }
