--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -41,6 +41,9 @@ hr{
     max-height: 90%;
     overflow-y: scroll;
 }
+.card-padding{
+    padding: calc(var(--bs-gutter-x)* .5) calc(var(--bs-gutter-x)* .5) 0;
+}
 .list-job-list{
     display: grid;
     grid-template-columns: 1fr;
@@ -81,6 +84,16 @@ hr{
         height: 2.4rem;
         width: 100%;
         margin-bottom: 1rem;
+        cursor: pointer;
+        background-size: 100% 200%;
+        background-image: linear-gradient(to bottom,#fff 50%,#888DEA 50%);
+        // background-repeat: no-repeat;
+        background-position: 0 0%;
+        transition: background-position .2s;
+        &:hover {
+            color: #fff;
+            background-position: 0 100%
+        }
     }
 }
 
@@ -141,14 +154,17 @@ mat-list-item{
     padding: 0 !important;
 }
 
-
+.w-80{
+    width: 80% !important;
+    transition: width 0.3s ease;
+}
 
 .right-container{
     display: flex;
     padding-top: 3rem;
     flex-direction: column;
-    width: 80% !important;
     max-height: 100%;
+    transition: width 0.2s ease;
     .search-btn{
         display: flex;
         align-items: center;
@@ -160,6 +176,7 @@ mat-list-item{
 }
 .expand-job-details {
     display: flex;
+    padding: 0 calc(var(--bs-gutter-x)* .5);
     width: 100%;
     cursor: pointer;
     height: 2rem;
@@ -176,15 +193,37 @@ mat-list-item{
     }
 }
 
-.search-bar{
-    background-color: #BBBEEC;
-    border-radius:  5px;
-    padding: 0.2rem;
-    cursor: pointer;
-    
-    width: 30%;
+.toolbar-right-container{
+    width: 80%;
+}
+.mobile-filter-icon-container{
+    display: none;
+}
+.filter-icon-container{
     display: flex;
     align-items: center;
+    width: 20%;
+    margin-right: 1rem;
+    cursor: pointer;
+    background-size: 100% 200%;
+    background-image: linear-gradient(to bottom,transparent 50%,#888DEA 50%);
+    font-size: 0.8em;
+    background-position: 0 0%;
+    transition: background-position .1s;
+    &:hover{
+        color: #fff;
+        background-position: 0 100%;
+        border-radius:2rem;
+        padding: 0.2rem;
+    }
+}
+.search-bar{
+    background-color: #BBBEEC;
+    border-radius: 2rem;
+    padding: 0.2rem;
+    padding-left: 1.5rem;
+    width: 50%;
+    height: 2.2rem;
     justify-content: space-between;
     
     .search-input{
@@ -192,7 +231,7 @@ mat-list-item{
         outline: none;
         background-color: #BBBEEC;
         width: 90%;
-        cursor: pointer;
+        font-size: 0.8em;
         
     }
     button{
@@ -212,3 +251,68 @@ mat-list-item{
         }
     }
 }
+
+.material-symbols-filled{
+    font-variation-settings: 'FILL' 1;
+}
+
+@media only screen and (max-width: 425px) {
+    .w-20{
+        display: none !important;
+    }
+    .w-80{
+        width: 100% !important;
+        transition: width 0.3s ease;
+    }
+    .grid-job-list{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 0.5rem;
+        max-height: 90%;
+        overflow-y: scroll;
+    }
+    .grid-list-switcher{
+        display: none;
+    }
+    .desktop-filter-icon-label{
+        display: none;
+    }
+    .search-bar{
+        background-color: #BBBEEC;
+        border-radius: 2rem;
+        padding: 0.2rem;
+        width: 100%;
+        padding-left: 1.5rem;
+        height: 2.2rem;
+        justify-content: space-between;
+    }
+    .filter-icon-container{
+        display: none;
+    }
+    .mobile-filter-icon-container{
+        width: fit-content;
+        display: flex;
+        align-items: center;
+        margin-right: 1rem;
+        cursor: pointer;
+        background-size: 100% 200%;
+        background-image: linear-gradient(to bottom,transparent 50%,#888DEA 50%);
+        font-size: 0.8em;
+        background-position: 0 0%;
+        transition: background-position .1s;
+        &:hover{
+            color: #fff;
+            background-position: 0 100%;
+            border-radius:2rem;
+            padding: 0.2rem;
+        }
+    }
+}
+
+.example-container {
+    width: 100%;
+    height: 100%;
+  }
+  
+
+  
