--- a/src/app/components/application-page/application-page.component.html
+++ b/src/app/components/application-page/application-page.component.html
@@ -1,3 +1,20 @@
+<mat-toolbar>
+  <div class="toolbar-container container d-flex">
+    <span class="app-logo">
+      <a class="navbar-brand" href="#">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFqno-o15uF8Ewt3FiPFhfHFZXspX9y9teNZt-xvdNrfxVUGvoSoZgj0bnlcAtKWlPb88&usqp=CAU"
+          alt="Logo" width="30" height="24"
+          class="d-inline-block align-text-top"
+        />
+      </a>
+    </span>
+    <span  class="title-ml-auto">
+      <label for="job-title">{{dataService.selectedJob.JobTitle}}</label>
+      <label *ngIf="dataService.selectedJob.Location" for="location">{{dataService.selectedJob.Location}}</label>
+     </span>  
+  </div>
+</mat-toolbar>
 <div class="container">
   <div class="row g-3">
     <div class="col-md-6">
@@ -13,30 +30,30 @@
       <input type="email" class="form-control" placeholder="Confirm Email" aria-label="Confirm Email">
     </div>
     <div class="col-md-6">
-      <input type="text" class="form-control" placeholder="Place of Residence" aria-label="Place of Residence">
+      <input type="address" class="form-control" placeholder="Address" aria-label="Place of Residence">
     </div>
     <div class="d-flex col-md-6">
-      <button type="button" class="btn btn-outline-secondary country-code" disabled>Action</button>
+      <button type="button" class="btn btn-outline-secondary country-code" disabled>{{selectedCountry.areaCode}}</button>
       <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split country-code-dropdown" data-bs-toggle="dropdown" aria-expanded="false">
         <span class="visually-hidden">Toggle Dropdown</span>
       </button>
       <ul class="dropdown-menu">
         <input class="dropdown-item" type="text" [(ngModel)]="countryCodeSearchString" name="filter" placeholder="search...">
         @for(country of countriesWithCallingCode | countryCodeFilter:countryCodeSearchString; track country){
-        <li>
+        <li (click)="selectedCountry = country">
           <span class="country-list-items dropdown-item gap-3">
             <span class="country-flag"><img [src]="country.flag" alt="" srcset=""></span>
             <span class="country-name">{{country.countryName}}</span>
-            <span class="country-dailing-code">{{country.countryCode}}</span>
+            <span class="country-dailing-code">{{country.areaCode}}</span>
           </span>
         </li>
         }
       </ul>
-      <input type="text" class="form-control tel-input" aria-label="Text input with segmented dropdown button">
+      <input type="number" class="form-control tel-input" aria-label="Text input with segmented dropdown button">
     </div>
-    <div class="col-md-6">
+    <div class="col">
       <div class="dropzone">
-        <input type="file form-control" accept=".pdf"
+        <input type="file" accept=".pdf"
           multiple="allowMultipleFiles"
           (drop)="onFiledrop($event)"
           (change)="onFileSelected($event)"
@@ -57,5 +74,122 @@
       </div>
     </div>
   </div>
+  <hr>
+  <div class="row g-3">
+    <div class="experience">
+      <div class="experience-title-container">
+        <h2>Experience</h2>
+        <button mat-fab extended (click)="addExperience()">
+          <mat-icon>add</mat-icon>
+          Add
+        </button>
+      </div>
+      @for(experience of experienceList; track experience){
+        <form class="row g-3">
+          <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input type="email" class="form-control" id="inputEmail4">
+          </div>
+          <div class="col-md-6">
+            <label for="inputPassword4" class="form-label">Password</label>
+            <input type="password" class="form-control" id="inputPassword4">
+          </div>
+          <div class="col-12">
+            <label for="inputAddress" class="form-label">Address</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+          </div>
+          <div class="col-12">
+            <label for="inputAddress2" class="form-label">Address 2</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+          </div>
+          <div class="col-md-6">
+            <label for="inputCity" class="form-label">City</label>
+            <input type="text" class="form-control" id="inputCity">
+          </div>
+          <div class="col-md-4">
+            <label for="inputState" class="form-label">State</label>
+            <select id="inputState" class="form-select">
+              <option selected>Choose...</option>
+              <option>...</option>
+            </select>
+          </div>
+          <div class="col-md-2">
+            <label for="inputZip" class="form-label">Zip</label>
+            <input type="text" class="form-control" id="inputZip">
+          </div>
+          <div class="col-12">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="gridCheck">
+              <label class="form-check-label" for="gridCheck">
+                Check me out
+              </label>
+            </div>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Sign in</button>
+          </div>
+        </form>
+      }
+    </div>
+  </div>
+  <hr>
+  <div class="row g-3">
+    <div class="experience">
+      <div class="experience-title-container">
+        <h2>Education</h2>
+        <button mat-fab extended (click)="addEducation()">
+          <mat-icon>add</mat-icon>
+          Add
+        </button>
+      </div>
+      @for(education of educationList; track education){
+        <form class="row g-3">
+          <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input type="email" class="form-control" id="inputEmail4">
+          </div>
+          <div class="col-md-6">
+            <label for="inputPassword4" class="form-label">Password</label>
+            <input type="password" class="form-control" id="inputPassword4">
+          </div>
+          <div class="col-12">
+            <label for="inputAddress" class="form-label">Address</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+          </div>
+          <div class="col-12">
+            <label for="inputAddress2" class="form-label">Address 2</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+          </div>
+          <div class="col-md-6">
+            <label for="inputCity" class="form-label">City</label>
+            <input type="text" class="form-control" id="inputCity">
+          </div>
+          <div class="col-md-4">
+            <label for="inputState" class="form-label">State</label>
+            <select id="inputState" class="form-select">
+              <option selected>Choose...</option>
+              <option>...</option>
+            </select>
+          </div>
+          <div class="col-md-2">
+            <label for="inputZip" class="form-label">Zip</label>
+            <input type="text" class="form-control" id="inputZip">
+          </div>
+          <div class="col-12">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="gridCheck">
+              <label class="form-check-label" for="gridCheck">
+                Check me out
+              </label>
+            </div>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Sign in</button>
+          </div>
+        </form>
+      }
+    </div>
+  </div>
+  <hr>
 </div>
 
