--- a/src/app/components/application-page/application-page.component.scss
+++ b/src/app/components/application-page/application-page.component.scss
@@ -2,6 +2,14 @@ $borderlightBlue: rgb(0, 126, 143);
 $lightBlue: #EEF5F5;
 $greyed: #aaa;
 
+mat-toolbar{
+  margin-bottom: 3rem;
+  height: 5rem;
+  .title-ml-auto{
+    margin-left: auto;
+    flex-wrap: wrap;
+  }
+}
 .dropzone {
   padding: 2rem;
   border-radius: 0.375rem;
@@ -9,6 +17,11 @@ $greyed: #aaa;
   border: dashed 1px #979797;
   position: relative;
   margin: 0 auto;
+  label {
+    width: 11.45rem;
+    border-radius: 10px;
+    padding: 8px 16px;
+  }
   input {
     opacity: 0;
     position: absolute;
@@ -31,19 +44,7 @@ $greyed: #aaa;
 .error-alert {
     color: red;
 }
-// .dropzone > label{
-//     color: white;
-//     width: 183px;
-//     height: 44px;
-//     border-radius: 21.5px;
-//     background-color: #db202f;
-//     padding: 8px 16px;
-//   }
-label {
-    width: 11.45rem;
-    border-radius: 10px;
-    padding: 8px 16px;
-}
+
 
 .country-code{
   border-top-right-radius: 0;
@@ -77,6 +78,7 @@ label {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   border-left: none
+  
 }
 
 .dropdown-item{
@@ -99,5 +101,20 @@ label {
   .country-name{
     text-overflow: ellipsis;
     overflow: hidden;
+  }
+}
+
+.experience-title-container{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  button{
+    background-color: #979797;
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+  h2{
+    font-size: 1.5rem;
   }
 }
