--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,6 +12,18 @@
         var(--electric-violet) 100%
       );
 }
+mat-toobar{
+    margin-bottom: 3rem;
+    height: 5rem;
+}
+.second-navbar{
+    background: rebeccapurple;
+    color: white;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
 hr{
     margin: 0.375rem;
 }
@@ -32,7 +44,7 @@ hr{
     }
 }
 .main-wrap{
-    height: 100vh;
+    height: 94vh;
 }
 .grid-job-list{
     display: grid;
@@ -311,7 +323,7 @@ mat-list-item{
 
 .example-container {
     width: 100%;
-    height: 100%;
+    // height: 85%;
   }
   
 
